tests/neg/todo/arrays/arr-18.ts

var a = [1,2,3,4,5]

a[5] = 1;
